STYLE: App's generaş overflow property has been made hidden to prevent unnecessary gap on mobile devices

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -4,6 +4,11 @@
     font-family: "DmSansLight";
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 @font-face {
     font-family: 'DmSansLight';
     src: local('DMSans'), url(./fonts/DMSans.ttf) format('truetype');
